refactored filter logic to collection

--- a/notes/app/index.html
+++ b/notes/app/index.html
@@ -95,6 +95,7 @@
     <script src="js/lib/json2.min.js"></script>
     <script src="js/lib/backbone.min.js"></script>
     <script src="js/lib/backbone.localStorage.min.js"></script>
+		<script src="bower_components/backbone-filtered-collection/backbone-filtered-collection.js"></script>
     <script src="js/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/lib/showdown/showdown.js"></script>
 
