--- a/notes/test/test.html
+++ b/notes/test/test.html
@@ -24,6 +24,7 @@
     <script src="../app/js/lib/json2.js"></script>
     <script src="../app/js/lib/backbone.js"></script>
     <script src="../app/js/lib/backbone.localStorage.js"></script>
+		<script src="../app/bower_components/backbone-filtered-collection/backbone-filtered-collection.js"></script>
     <script src="../app/js/lib/bootstrap/js/bootstrap.js"></script>
     <script src="../app/js/lib/showdown/showdown.js"></script>
 
@@ -61,19 +62,7 @@
     </script>
 
     <!-- Include our specs. -->
-    <!-- Ch02 -->
-    <script src="js/spec/namespace.spec.js"></script>
-    <script src="js/spec/models/note.spec.js"></script>
-    <!-- Ch03 -->
-    <script src="js/spec/collections/notes.spec.js"></script>
-    <script src="js/spec/views/note-view.spec.js"></script>
-    <!-- Ch04 -->
-    <script src="js/spec/views/note-nav.spec.js"></script>
-    <script src="js/spec/views/note.spec.js"></script>
-    <!-- Ch05 -->
-    <script src="js/spec/views/notes-item.spec.js"></script>
-    <script src="js/spec/views/notes-filter.spec.js"></script>
-    <script src="js/spec/views/notes.spec.js"></script>
-    <script src="js/spec/routers/router.spec.js"></script>
+		<!-- <script src="js/spec/views/notes-filter.spec.js"></script> -->
+		<script src="js/spec/collections/notes.spec.js"></script>
   </body>
 </html>
